added, update and remove quanity on bag items, added csrf token variable to bag template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -165,6 +165,10 @@ button#main-nav-btn.navbar-toggler {
     
     
 }
+.update-link,
+.remove-item {
+    cursor:pointer;
+}
 
 .btt-link {
     cursor: pointer;
